Changelog
=========

SVN
----------------

* Fixed a typo in spanish translation ("Eportar" instead of "Exportar")

1.3.2
----------------

* Included a custom referencobrowser_popup to show only objects that are
  allowed to be referenced inside the reference browser pop up.
  (Used when relating a person with an organization for example)

1.3.1
----------------

* Fixed display issues with rich text fields

* Added sector and subsector drop downs to the advanced organizations search

* Added a "Go back" link, when doing a quick search.

* [FIXED] was using the same id for translating both work and personal email
  in the search for persons template.
  
* Replaced the way content was retrieved for the views. Now it uses the catalog
  and, in the case of the persons, it uses the advanced query capabilities
  so it will sort using last name first and then first name.

* Added 2 sortable fields to the catalog, one for the last name and the other
  for the first name. They are added and indexed on installation.

* Added types names translation to the old i18n (probably a Plone bug?).

1.3.0
----------------

* Did an override over the contentviews template to workaround a possible bug of Plone when having the default page as a portal_action

* Found a way to get the 'Work' schemata title to be translated to spanish.

* Added some classes to the views, so forms and buttons are hidden when printing

* Added the "Select all" checkbox to all tables.

* Added an uninstall profile.

* When a user has permission to view an address book, it will see the 3
  main tabs with the 3 main views.

* Removed the border when inside a search or a search result. This "fixes"
  the issue where the wrong tab was selected when inside a search or search
  results.

* Added checkboxes to send email and export inside a group view.

* Fixed missing translations under the "Send emails page".

* Added "go back" and "Advanced search" buttons properly when getting or not
  getting search results.
