@@ -1,0 +1,3 @@
+.inlineForm .ArchetypesSelectionWidget label {
+    display:none;
+}
