@@ -6,6 +6,8 @@ SVN
 
 * Fixed a typo in spanish translation ("Eportar" instead of "Exportar")
 
+* Added a css to override Plone's default behaviour when editing a drop down field inline (it repeats the field label)
+
 1.3.2
 ----------------
 
